--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,14 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
 body {
     font-family: sans-serif;
+    margin: 0;
+    border-top: 1px solid white;
+    height: 100%;
 }
