--- a/src/app/grid/list-view/list-view.component.scss
+++ b/src/app/grid/list-view/list-view.component.scss
@@ -4,12 +4,25 @@ table {
 }
 
 table, th, td {
-    border: 1px solid lightgray;
+    border: 1px solid white;
 }
 
 tr {
     height: 2rem;
     max-height: 2rem;
+}
+
+td {
+    padding: 0 1rem;
+}
+
+thead tr {
+    background-color: darkslategray;
+    color: white;
+}
+
+tbody tr:nth-child(2n + 1) {
+    background-color: azure;
 }
 
 td:has(> button) {
